# CallFlowProcessor

./: README.md  requirements.txt
CDRClient/: .gitignore  mockclient.py
DataSources/: mockserver.py
DataSources/data/: call_events.json  calls.json  connections.json  operators.json
Service/: CMakeLists.txt  LICENSE  Makefile  docker-compose.yml
Service/.devcontainer/: Dockerfile  devcontainer.json
Service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
Service/postgresql/schemas/: db_1.sql
Service/src/: main.cpp
Service/src/components/cdr_uploaders/: cdr_upload_info.cpp  cdr_upload_info.hpp  cdr_uploader.cpp  cdr_uploader.hpp  cdr_uploader_base.hpp  external_cdr_uploader.cpp  external_cdr_uploader.hpp
Service/src/components/controllers/: call_controller.cpp  call_controller.hpp  call_event_controller.cpp  call_event_controller.hpp  cdr_controller.cpp  cdr_controller.hpp  connection_controller.cpp  connection_controller.hpp  operator_controller.cpp  operator_controller.hpp
Service/src/components/data_fetchers/: call_data_fetcher.cpp  call_data_fetcher.hpp  call_event_data_fetcher.cpp  call_event_data_fetcher.hpp  connection_data_fetcher.cpp  connection_data_fetcher.hpp  data_fetcher_base.hpp  operator_data_fetcher.cpp  operator_data_fetcher.hpp
Service/src/handlers/statistics/calls/summary/: handler.hpp
Service/src/handlers/statistics/operators/: handler.hpp
Service/src/models/: call.hpp  call_event.hpp  cdr.hpp  connection.hpp  external_cdr.hpp  operator.hpp
Service/tests/: conftest.py  test_cdr_uploader.py  test_external_cdr_uploader.py
